tests/NormalTests/paczka1/fuzzy1/89582092.err
Error in line 1: JPvFi S701 71,0
Error in line 9: GBx A822 53,6
Error in line 13: GwVXMI A76 354,1
Error in line 22: GwVXMI A119 59,1
Error in line 26: GwVXMI A822 6,9
